samples/_failures_safe/1761074879_c4f6b9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c0efa3b8.c: In function ‘main’:
./samples/SAFE/__tmp_c0efa3b8.c:158:9: error: expected declaration or statement at end of input
  158 |         input_buffer[len - 1] = '\0';
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_c0efa3b8.c:158:9: error: expected declaration or statement at end of input
